[gd_scene load_steps=17 format=3 uid="uid://gchytlw2aytx"]

[ext_resource type="Script" path="res://scripts/super_major.gd" id="1_y8uag"]
[ext_resource type="Script" path="res://scripts/util/dialog_manager.gd" id="2_ik3q1"]
[ext_resource type="FontFile" uid="uid://cbclwdapxhy4i" path="res://components/UI/mitochondria.ttf" id="2_urtpl"]
[ext_resource type="Texture2D" uid="uid://lpnl8kq2itxa" path="res://art/characters/npcs/supermajor.png" id="3_1o5y1"]


[sub_resource type="AtlasTexture" id="AtlasTexture_fo15f"]
atlas = ExtResource("3_1o5y1")
region = Rect2(0, 0, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_itdy6"]
atlas = ExtResource("3_1o5y1")
region = Rect2(0, 640, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_pm6c6"]
atlas = ExtResource("3_1o5y1")
region = Rect2(0, 1280, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_cel4a"]
atlas = ExtResource("3_1o5y1")
region = Rect2(640, 0, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_724bk"]
atlas = ExtResource("3_1o5y1")
region = Rect2(1280, 640, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_ves4d"]
atlas = ExtResource("3_1o5y1")
region = Rect2(640, 1280, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_16dn4"]
atlas = ExtResource("3_1o5y1")
region = Rect2(1280, 1280, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_a4b2j"]
atlas = ExtResource("3_1o5y1")
region = Rect2(640, 640, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_ewmke"]
atlas = ExtResource("3_1o5y1")
region = Rect2(1280, 0, 640, 640)

[sub_resource type="SpriteFrames" id="SpriteFrames_13qol"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fo15f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_itdy6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pm6c6")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cel4a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_724bk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ves4d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_16dn4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a4b2j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ewmke")
}],
"loop": true,
"name": &"talking",
"speed": 6.0
}]

[sub_resource type="SphereShape3D" id="SphereShape3D_u5t6t"]

[sub_resource type="BoxShape3D" id="BoxShape3D_x0cra"]
size = Vector3(2.06418, 0.861085, 2)

[node name="SuperMajor" type="CharacterBody3D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_y8uag")

[node name="DialogManager" type="Node3D" parent="."]
script = ExtResource("2_ik3q1")

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
pixel_size = 0.002
billboard = 1
sprite_frames = SubResource("SpriteFrames_13qol")
animation = &"talking"

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
visible = false
shape = SubResource("SphereShape3D_u5t6t")

[node name="InteractionArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="InteractionArea"]
shape = SubResource("BoxShape3D_x0cra")

[node name="Label3D" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)
billboard = 1
text = "Press T(alk)"
font = ExtResource("2_urtpl")
font_size = 17

[connection signal="body_entered" from="InteractionArea" to="." method="_on_interaction_area_body_entered"]
[connection signal="body_exited" from="InteractionArea" to="." method="_on_interaction_area_body_exited"]
